--- a/Test02/Views/KeToan/QLCongno.cshtml
+++ b/Test02/Views/KeToan/QLCongno.cshtml
@@ -14,20 +14,20 @@
         <div class="tile">
             <div class="tile-body">
                
-                <div class="row element-button">
+                <!--<div class="row element-button">
                     <div class="col-sm-2">
                         <a class="btn btn-delete btn-sm nhap-tu-file" href="~/KeToan/TaoCongno "><i class="fas fa-file-upload"></i> Thêm phiếu công nợ</a>
-                    </div>
+                    </div>-->
                     @*<div class="col-sm-2">
                             <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="#"><i class="fas fa-copy"></i> Làm mới danh sách</a>
                         </div>*@
-                    <div class="col-sm-2">
+                    <!--<div class="col-sm-2">
                         <a class="btn btn-delete btn-sm print-file" type="button" title="In" onclick="myApp.printTable()">
                             <i class="fas fa-print"></i> In dữ liệu
                         </a>
                     </div>
 
-                </div>
+                </div>-->
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
 
                     <div class="col-md-1">
