--- a/Test02/Views/KeToan/CongnoDL.cshtml
+++ b/Test02/Views/KeToan/CongnoDL.cshtml
@@ -1,11 +1,11 @@
-﻿@model IEnumerable<Test02.Models.PhieuCongNo>
+﻿@model IEnumerable<Test02.Models.DonHang>
 @using Test02.Models;
 
 @{
     ViewBag.Title = "CongnoDL";
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
     ViewBag.dsdl = "active";
-    ViewBag.nd = "Danh sách hóa đơn";
+    ViewBag.nd = "Công nợ của đại lý";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
 }
 
@@ -26,7 +26,20 @@
                 </div>
 
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
-                  
+                    @foreach (var item in Model)
+                    {
+
+                        <p>
+                            <strong>Tên Đại lý: </strong> @{
+                                var tendly = db.DaiLies.Where(s => s.MaDL == item.MaDL).FirstOrDefault();}
+                            @Html.DisplayFor(modelItem => tendly.TenDL)
+                        </p>
+
+                        break;
+
+                    }
+
+
                     <div class="row">
                         <div class="col-sm-12">
                             <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
@@ -34,7 +47,7 @@
                                 <thead>
                                     <tr role="row">
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="ID nhân viên: activate to sort column ascending" style="width: 100px;">Mã đơn hàng</th>
-                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Địa chỉ: activate to sort column ascending" style="width: 100px;">Mã đại lý</th>
+                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Địa chỉ: activate to sort column ascending" style="width: 100px;">Mã hóa đơn</th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="SĐT: activate to sort column ascending" style="width: 100px;">Mã nhân viên lập</th>
                                         <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Địa chỉ: activate to sort column ascending" style="width: 100px;">Ngày lập</th>
                                         <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Địa chỉ: activate to sort column ascending" style="width: 100px;">Điểm giao hàng</th>
@@ -43,31 +56,34 @@
                                 </thead>
                                 <tbody>
                                     @{ var total = 0;}
+
                                     @foreach (var item in Model)
                                     {
-                                        if (item.TrangThai == "Chưa thanh toán")
+                                        if (item.TinhTrangThanhToan == "Chưa thanh toán")
                                         {
                                             <tr>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.MaCongNo)
+                                                    @Html.DisplayFor(modelItem => item.MaDH)
                                                 </td>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.MaDL)
+                                                    @{var hd = db.HoaDons.Where(s => s.MaDH == item.MaDH).FirstOrDefault();}
+                                                    @Html.DisplayFor(modelItem => hd.MaHD)
                                                 </td>
                                                 <td>
-                                                    @{var madl = db.DaiLies.Where(s => s.MaDL == item.MaDL).FirstOrDefault();
-                                                        
-                                                    }
-                                                    @Html.DisplayFor(modelItem => madl.TenDL)
+                                                    @Html.DisplayFor(modelItem => hd.TenDVTiepNhan)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => hd.NgayLap)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.DiemGiao)
                                                 </td>
 
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.HanTra)
-                                                </td>
-                                               
-                                                <td>
-                                                    @{ total += Convert.ToInt32(item.TienNo);}
-                                                    @{ var ThanhTien = string.Format("{0:0,0 vnđ}", item.TienNo);}
+                                                    @{
+
+                                                        total += Convert.ToInt32(item.TongTien);
+                                                        var ThanhTien = string.Format("{0:0,0 vnđ}", item.TongTien);}
                                                     @Html.DisplayFor(modelItem => ThanhTien)
 
                                                 </td>
@@ -85,6 +101,19 @@
                             </table>
                         </div>
                     </div>
+                    @foreach (var i in Model)
+                    {
+                        <div class="row element-button">
+                            <div class="col-sm-2">
+                                <a class="btn btn-cancel" type="button" title="Back" href="~/KeToan/DSDaiLy"><i class="fas fa-step-backward"></i> Quay lại</a>
+                            </div>
+                            <div class="col-sm-2">
+                                <a class="btn btn-delete btn-sm nhap-tu-file" href="~/KeToan/TaoCongno/@i.MaDL "><i class="fas fa-file-upload"></i> Thêm phiếu công nợ</a>
+                            </div>
+                        </div>
+                    }
+
+
                 </div>
             </div>
         </div>
