--- a/Test02/Views/KeToan/QLHoaDon.cshtml
+++ b/Test02/Views/KeToan/QLHoaDon.cshtml
@@ -17,7 +17,6 @@
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
                     <div class="row">
 
-
                         <div class="col-md-1">
                             <div id="sampleTable_filter" class="dataTables_filter">
                                 <label>Tìm kiếm:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="sampleTable"></label>
@@ -44,57 +43,54 @@
                                 <tbody>
                                     @foreach (var item in Model)
                                     {
-                                    <tr>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.MaHD)
-                                        </td>
+                                        <tr>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.MaHD)
+                                            </td>
 
-                                        <td>
-                                            @{var madl = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();
+                                            <td>
+                                                @{var madl = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();
 
-                                            }
-                                            @Html.DisplayFor(modelItem => madl.MaDL)
-                                        </td>
-                                        <td>
-                                            @{var madh = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();
-                                                var tendl = db.DaiLies.Where(s => s.MaDL == madh.MaDL).FirstOrDefault();
-                                            }
-                                            @Html.DisplayFor(modelItem => tendl.TenDL)
-                                        </td>
+                                                }
+                                                @Html.DisplayFor(modelItem => madl.MaDL)
+                                            </td>
+                                            <td>
+                                                @{var madh = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();
+                                                    var tendl = db.DaiLies.Where(s => s.MaDL == madh.MaDL).FirstOrDefault();
+                                                }
+                                                @Html.DisplayFor(modelItem => tendl.TenDL)
+                                            </td>
 
-                                        <td>
-                                            @{ var ThanhTien = string.Format("{0:0,0 vnđ}", item.TongTien);}
-                                            @Html.DisplayFor(modelItem => ThanhTien)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.TenDVTiepNhan)
-                                        </td>
-                                        <td>
-                                            @{var dh = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();
+                                            <td>
+                                                @{ var ThanhTien = string.Format("{0:0,0 vnđ}", item.TongTien);}
+                                                @Html.DisplayFor(modelItem => ThanhTien)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.TenDVTiepNhan)
+                                            </td>
+                                            <td>
+                                                @{var dh = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();
 
-                                            }
-                                            @Html.DisplayFor(modelItem => dh.TinhTrangThanhToan)
-                                        </td>
-                                        <td>
-                                            Ngay lập
-                                        </td>
+                                                }
+                                                @Html.DisplayFor(modelItem => dh.TinhTrangThanhToan)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.NgayLap)
+                                            </td>
 
-                                        <td>
-                                            <a href="/KeToan/ChinhsuaHD/@item.MaDH" class="btn btn-primary btn-sm edit">
-                                                <i class="fa fa-edit"></i>
-                                            </a>
-                                            <a href="/KeToan/XoaHD/@item.MaHD" class="btn btn-primary btn-sm trash">
-                                                <i class="fas fa-trash-alt"></i>
-                                            </a>
-                                            <a href="/KeToan/XuatHDBH/@item.MaDH" class="btn btn-primary btn-sm edit">
-                                                <i class="fas fa-train"></i>
-                                            </a>
-                                        </td>
+                                            <td>
+                                                <a href="/KeToan/ChinhsuaHD/@item.MaDH" class="btn btn-primary btn-sm edit">
+                                                    <i class="fa fa-edit"></i>
+                                                </a>
+                                                <a href="/KeToan/XoaHD/@item.MaHD" class="btn btn-primary btn-sm trash">
+                                                    <i class="fas fa-trash-alt"></i>
+                                                </a>
+                                                <a href="/KeToan/XuatHDBH/@item.MaDH" class="btn btn-primary btn-sm edit">
+                                                    <i class="fas fa-train"></i>
+                                                </a>
+                                            </td>
 
-
-
-
-                                    </tr>
+                                        </tr>
                                     }
                                 </tbody>
                             </table>
@@ -105,4 +101,34 @@
         </div>
     </div>
 </div>
+
+
+
+    @*<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    
+    <script type="text/javascript">
+       $(document).ready(function () {
+           $("#btnalermessage").click(function () {
+                swal("a");
+            });
+        });*@
+        @*function openSuccess(strmess) {
+            var myDiv = document.getElementById("mymodalsuccessAlerbody");
+            myDiv.innerHTML = strmess;
+            $('MyModalSuccess').modal('show');
+        }
+
+        $(document).ready(function () {
+            var msg = "@TempData["successmassage"]";
+            if (msg)
+                openSuccess(msg);
+
+        }
+        );*@
+
+
+
+    @*</script>*@
+
 
